--- a/ErishaBusiness/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/ErishaBusiness/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -17,7 +17,7 @@
     <link href="~/admin/datatables/responsive.bootstrap.min.css" rel="stylesheet" />
     <script src="~/admin/datatables/jquery.datatables.js"></script>
     <script src="~/admin/datatables/datatables.bootstrap4.min.js"></script>
-    <link href="~/admin/css/custom.css" rel="stylesheet" />
+    <link href="~/admin/css/custom.css" rel="stylesheet" asp-append-version="true" />
     <link href="~/admin/sweetalert/sweetalert2.min.css" rel="stylesheet" />
     <script src="~/admin/sweetalert/sweetalert2.all.min.js"></script>
     <script src="~/admin/pagesscript/commonscript.js"></script>
@@ -47,7 +47,7 @@
                                 <i class="mdi mdi-settings text-primary"></i>
                                 Settings
                             </a>
-                            <a class="dropdown-item">
+                            <a class="dropdown-item" href="/admin/account/logoff">
                                 <i class="mdi mdi-logout text-primary"></i>
                                 Logout
                             </a>
