--- a/ErishaBusiness/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/ErishaBusiness/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -74,6 +74,18 @@
                             <span class="menu-title">Category</span>
                         </a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/admin/productvoucher">
+                            <i class="mdi mdi-gift menu-icon"></i>
+                            <span class="menu-title">Product Voucher</span>
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/admin/emailtemplate">
+                            <i class="mdi mdi-email menu-icon"></i>
+                            <span class="menu-title">Email Template</span>
+                        </a>
+                    </li>
                 </ul>
             </nav>
             <div class="main-panel">
