Implement Banner Layout in admin

--- a/ErishaBusiness/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/ErishaBusiness/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -86,6 +86,12 @@
                             <span class="menu-title">Email Template</span>
                         </a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/admin/bannerlayout">
+                            <i class="mdi mdi-palette menu-icon"></i>
+                            <span class="menu-title">Banner Layout</span>
+                        </a>
+                    </li>
                 </ul>
             </nav>
             <div class="main-panel">
