commit code changes

--- a/ErishaBusiness/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/ErishaBusiness/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -92,6 +92,18 @@
                             <span class="menu-title">Banner Layout</span>
                         </a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/admin/cmspage">
+                            <i class="mdi mdi-google-pages menu-icon"></i>
+                            <span class="menu-title">Cms Pages</span>
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/admin/sitesetting">
+                            <i class="mdi mdi-settings menu-icon"></i>
+                            <span class="menu-title">Site Setting</span>
+                        </a>
+                    </li>
                 </ul>
             </nav>
             <div class="main-panel">
