--- a/ErishaBusiness/Views/Shared/Components/Banner/Default.cshtml
+++ b/ErishaBusiness/Views/Shared/Components/Banner/Default.cshtml
@@ -1,7 +1,7 @@
 ﻿@using Microsoft.AspNetCore.Http
 @inject IHttpContextAccessor Accessor
 @using ErishaBusiness.Data.DTOS
-@model List<BannerLayoutListDto>
+@model DashboardHeaderDto
 
 <div class="bannerhny-content">
     <div class="content-baner-inf">
@@ -10,7 +10,7 @@
                 @{
                     var rowIndex = 0;
                 }
-                @foreach (var item in Model.Where(x => x.LayoutType == 1))
+                @foreach (var item in Model.BannerLayoutList.Where(x => x.LayoutType == 1))
                 {
                     <li data-target="#carouselExampleIndicators" data-slide-to="@(rowIndex)" class="@(rowIndex == 0 ?"active":"")"></li>
                     rowIndex++;
@@ -20,7 +20,7 @@
                 @{
                     var rowIndex1 = 0;
                 }
-                @foreach (var item in Model.Where(x => x.LayoutType == 1))
+				@foreach (var item in Model.BannerLayoutList.Where(x => x.LayoutType == 1))
                 {
                     <div class="carousel-item @(rowIndex1 == 0 ?"active":"")" style="background: url(@(item.ImageUrl)) no-repeat center;">
                         <div class="container">
@@ -47,12 +47,46 @@
             </a>
         </div>
     </div>
-    <div class="right-banner" style="background: url(@(Model.Where(x=>x.LayoutType == 3).Select(x=> x.ImageUrl).FirstOrDefault())?w=500) no-repeat center;">
+	<div class="right-banner" style="background: url(@(Model.BannerLayoutList.Where(x=>x.LayoutType == 3).Select(x=> x.ImageUrl).FirstOrDefault())?w=500) no-repeat center;">
         <div class="right-1">
             <h4>
-                @(Model.Where(x => x.LayoutType == 3).Select(x => x.Title).FirstOrDefault())
+				@(Model.BannerLayoutList.Where(x => x.LayoutType == 3).Select(x => x.Title).FirstOrDefault())
             </h4>
         </div>
     </div>
 
 </div>
+
+
+<section class="w3l-grids-hny-2">
+	<!-- /content-6-section -->
+	<div class="grids-hny-2-mian py-5">
+		<div class="container py-lg-5">
+
+			<h3 class="hny-title mb-0 text-center">Shop With <span>Us</span></h3>
+			<p class="mb-4 text-center">Handpicked Favourites just for you</p>
+			<div class="welcome-grids row mt-5">
+                @foreach(var item in Model.CategoryDtoList.Take(6))
+                {
+                    <div class="col-lg-2 col-md-4 col-6 welcome-image">
+                        <div class="boxhny13">
+                            <a href="#URL">
+                                <img src="@item.ImagePath" class="img-fluid" alt="" />
+                                <div class="boxhny-content">
+                                    <h3 class="title">@item.CategoryName</h3>
+                                </div>
+                            </a>
+                        </div>
+                        <h4>
+                            <a href="#URL">
+                                @item.CategoryName
+                            </a>
+                        </h4>
+                    </div>
+                }
+              
+			</div>
+
+		</div>
+	</div>
+</section>
