--- a/ErishaBusiness/Views/Shared/Components/Header/Default.cshtml
+++ b/ErishaBusiness/Views/Shared/Components/Header/Default.cshtml
@@ -98,7 +98,7 @@
 		<nav class="navbar navbar-expand-lg navbar-light">
 			<div class="container-fluid serarc-fluid">
 				<a class="navbar-brand" href="index.html">
-					Spry<span class="lohny">S</span>tore
+					Erisha<span class="lohny">B</span>usiness
 				</a>
 				<!-- if logo is image enable this
 						<a class="navbar-brand" href="#index.html">
