--- a/ErishaBusiness/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/ErishaBusiness/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -104,6 +104,12 @@
                             <span class="menu-title">Site Setting</span>
                         </a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/admin/product">
+                            <i class="mdi mdi-shopping menu-icon"></i>
+                            <span class="menu-title">Product</span>
+                        </a>
+                    </li>
                 </ul>
             </nav>
             <div class="main-panel">
